PPNA-3924 gap fix 2

--- a/_static/css/custom_1626334069935.css
+++ b/_static/css/custom_1626334069935.css
@@ -591,6 +591,7 @@ redoc .redoc-json .collapser {
     display: flex;
     flex: 1 1 0;
     flex-wrap:wrap;
+    gap: 24px;
 }
 
 .popular-links-el {
@@ -602,22 +603,36 @@ redoc .redoc-json .collapser {
     box-shadow: inset 0 0 0 0 #DDDDDD;
     flex: 1 1 0;
     min-width: calc(max(50%, 200px) - 24px);
-    margin: 0 24px 0 0;
 }
 
-.popular-links-el:nth-child(even){
-    min-width: max(50%, 200px);
-    margin: 0;
+.popular-links-el:nth-child(1) {
+    order: 1;
+}
+
+.popular-links-el:nth-child(2) {
+    order: 2;
 }
 
 .popular-links-el.subdued {
     background-color: #FAFAFA;
     border-top: none;
+    margin-top: -24px;
+    order: 3;
+    padding: 24px;
+    box-sizing: border-box;
+    border-radius: 1px;
+    box-shadow: inset 0 0 0 0 #DDDDDD;
+    flex: 1 1 0;
+    min-width: calc(max(50%, 200px) - 25px);
 }
 
 .popular-links-el-filler {
-    min-width: calc(50% - 24px);
-    margin: 0 24px 0 0;
+    margin-top: 24px;
+    min-width: calc(max(50%, 200px) - 12px);
+    padding: 24px;
+    flex: 1 1 0;
+    order: 4;
+    box-sizing: border-box;
 }
 
 .popular-links-header {
@@ -643,4 +658,24 @@ a.link-large {
 
 .popular-links-el a.link:last-child {
     padding-bottom: 0;
+}
+
+@media (max-width:794px) and (min-width:768px) {
+    .popular-links-el:nth-child(2) {
+        order: 3;
+    }
+    .popular-links-el.subdued {
+        order: 2;
+        min-width: calc(max(50%, 200px) - 24px);
+    }
+}
+
+@media (max-width:440px){
+    .popular-links-el:nth-child(2) {
+        order: 3;
+    }
+    .popular-links-el.subdued {
+        order: 2;
+        min-width: calc(max(50%, 200px) - 24px);
+    }
 }
